2008-11-25  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-17.


2008-11-14 Yu-Sung Su     <ys463@columbia.edu>  
    * R/sim: change the slot name "unmodeled" into "fixef"


2008-11-11 Yu-Sung Su     <ys463@columbia.edu>  
    * man/sim: add some expample codes
    * R/sim: change the slot name "beta" into "coef"


2008-11-10  Yu-Sung Su     <ys463@columbia.edu>  
    * R/matching: add an option "replace".  Now matching() does matching with
        or without replacement.

2008-10-19  Yu-Sung Su     <ys463@columbia.edu>  
    * R/coefplot: rename option epsilon to offset


2008-9-24  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-16.
    * R/coefplot: 
        1. add the pch.pts option
        2. fix mar error.

2008-8-19  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-15.
    * R/sim: coerce bhat in sim.mer into a matrix to suit the use of mvrnorm

2008-7-27  Yu-Sung Su     <ys463@columbia.edu>  
    * R/coefplot: add options plot=TRUE, epsilon, add=FALSE into BUGS method

2008-7-22  Yu-Sung Su     <ys463@columbia.edu>  
    * R/bayesglm: new option "Warning" to turn off the error message
        of no convergence and separation

2008-7-22  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-14.
    * make all internal function start with .
    * add keyword manip to the docs
    * export logit(x) for use.
    * man/balance: doc for balance().
    * man/residual.plot: new function().
    * man/array.append: doc for array.append
    * man/sigma.hat: add ... option
    * man/se.coef: add ... option
    * R/array.append: new function to add array to the existing one.
    * R/coefplot: fix when plot=FALSE, should not plot varnames. 
    * R/balanceplot: obsolet!
    * R/balance: new function that computes, print and plot the balance stats
    * R/residual.plot: new function().
    * R/sigma.hat: add ...
    * R/se.coef: add ...
